--- a/nf-test-fonts/Dockerfile
+++ b/nf-test-fonts/Dockerfile
@@ -1,4 +1,5 @@
 FROM bash:5.1.8-alpine3.14
 WORKDIR /usr/bin
-RUN wget https://raw.githubusercontent.com/ryanoasis/nerd-fonts/master/bin/scripts/test-fonts.sh ; chmod +x test-fonts.sh
+RUN wget https://raw.githubusercontent.com/ryanoasis/nerd-fonts/master/bin/scripts/test-fonts.sh ; \
+  chmod +x test-fonts.sh
 CMD ["test-fonts.sh"]
