base image update

--- a/nf-test-fonts/Dockerfile
+++ b/nf-test-fonts/Dockerfile
@@ -1,4 +1,4 @@
-FROM bash:5.1.8-alpine3.14
+FROM bash:alpine3.15
 WORKDIR /usr/bin
 RUN wget https://raw.githubusercontent.com/ryanoasis/nerd-fonts/master/bin/scripts/test-fonts.sh ; \
   chmod +x test-fonts.sh
