base container update, multiarch support

--- a/exo-powershell/stable/Dockerfile
+++ b/exo-powershell/stable/Dockerfile
@@ -1,4 +1,3 @@
-FROM --platform=linux/amd64 mcr.microsoft.com/powershell:lts-7.2-alpine-3.14
-RUN pwsh -c 'Install-Module PSWSMan -Scope AllUsers -force' ; pwsh -c 'Install-WSMan' ; \
-  pwsh -c 'Install-Module ExchangeonlineManagement -force'
+FROM clowa/powershell-core:latest
+RUN pwsh -c 'Install-Module ExchangeonlineManagement -force'
 CMD [ "pwsh" ]
