--- a/exo-powershell/stable/ARM64/Dockerfile
+++ b/exo-powershell/stable/ARM64/Dockerfile
@@ -1,3 +1,3 @@
-FROM clowa/powershell-core:latest
+FROM --platform=arm64 clowa/powershell-core:latest
 RUN pwsh -c 'Install-Module ExchangeonlineManagement -force'
 CMD [ "pwsh" ]
